--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>MyEMS | the Leanding Free and Open Source Energy Management System</title>
+  <title>MyEMS | the Leanding Open Source Energy Management System</title>
 </head>
 
 <body>
